4.41: 4/XX/2012 (svn rYYYY)
	* CORE: Added java.sql.Date and java.sql.Timestmp data persister types.  java.util.Date is still recommended 

4.40: 4/16/2012 (svn r2516)
	* CORE: Fixed a couple of missing field configuration entries.   Thanks to Jeremy Stone.  Bug #3518474.
	* CORE: Fixed a problem that was causing FieldType to always use reflection.  Thanks to Jeremy Stone.  Bug #3518472.

4.39: 4/13/2012 (svn r2485)
	* CORE: Deprecated @DatabaseField foreignColumnName, renamed to foreignFieldName. Thanks to Candlejack. Bug #3507094.
	* CORE: Changed dao.callBatchTasks() from throwing Exception to SQLException.  Thanks to JC.
	* CORE: Improved createOrUpdate() to use idExists() instead of expensive method. Thanks to Chris Nevill. Bug #3514164.
	* CORE: Fixed tough bug with table configs of self referencing classes. Thanks to Slava Tysianchuk. Bug #3517094.
	* CORE: Added support for start and endThreadConnection() and added dao.commit() and rollBack().  Thanks to AlexPal.
	* JDBC: Added support for preparedStatement.setQueryTimeout(millis).  Thanks to mjomble. Feature #3502803.
	* JDBC: Fixed bug with pooled connection source and connections with autoCommit off. Thanks to AlexPal. Bug #3517098.
	* ANDROID: Finally fixed the number of rows changed for insert/delete/update calls using SQLite CHANGES() pragma.
	* ANDROID: Decided to _not_ fix the columnName case sensitivity issue introduced in 4.37.  Thanks to Roman Zimmer.
	* ANDROID: Fixed bad bug that was prematurely clearing DAO configs.  Thanks to Slava Tysianchuk.  Bug #3516920.

4.38: 3/23/2012 (svn r2426)
	* ANDROID: Fixed bad ObjectCache bug deep in Android shutdown/startup logic. Thanks to Filipe Leandro. Bug #3510266.

4.37: 3/21/2012 (svn r2406)
	* CORE: Fixed blocking bug where object cache exceptions would be thrown.  Thanks to Filipe Leandro.  Bug #3509853.
	* CORE: Fixed bug where LocalLog was overwriting log data written to local file.  Thanks to mjomble.  Bug #3437823.